# ChangeLog for media-sound/rhythmbox
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/rhythmbox/ChangeLog,v 1.206 2011/07/17 15:47:51 pacho Exp $

  17 Jul 2011; Pacho Ramos <pacho@gentoo.org> rhythmbox-0.12.8-r1.ebuild:
  Rhythmbox 0.12.x uses both musicbrainz slots (bug #357189 by dolphinling).

  26 Jun 2011; Brent Baude <ranger@gentoo.org> rhythmbox-0.12.8-r1.ebuild:
  Marking rhythmbox-0.12.8-r1 ppc for bug 370661

  09 Jun 2011; Sebastian Pipping <sping@gentoo.org> rhythmbox-0.12.8-r1.ebuild,
  rhythmbox-0.13.3.ebuild:
  Add >=sys-fs/udev-171[gudev] as an alternative dependency to
  >=sys-fs/udev-145[extras] (bug #370379)

  14 Apr 2011; Nirbheek Chauhan <nirbheek@gentoo.org>
  rhythmbox-0.13.3.ebuild:
  Restrict version dependency on gnome-media. Newer versions don't install
  libgnome-media-profiles.

  27 Mar 2011; Samuli Suominen <ssuominen@gentoo.org> rhythmbox-0.12.8-r1.ebuild,
  rhythmbox-0.13.3.ebuild:
  Remove support for sys-apps/hal wrt #313389.

*rhythmbox-0.13.3 (23 Mar 2011)

  23 Mar 2011; Gilles Dartiguelongue <eva@gentoo.org> +rhythmbox-0.13.3.ebuild,
  metadata.xml:
  Version bump, bug #341677. Enhanced multiple python support, bug #313971.

  23 Mar 2011; Nirbheek Chauhan <nirbheek@gentoo.org>
  rhythmbox-0.12.8-r1.ebuild:
  Fix slot-deps on gnome libs

  14 Mar 2011; Nirbheek Chauhan <nirbheek@gentoo.org>
  rhythmbox-0.12.8-r1.ebuild:
  Restrict dependency on gnome-media, 2.90 removes gnome-media-profiles.pc

  09 Mar 2011; Samuli Suominen <ssuominen@gentoo.org>
  rhythmbox-0.12.8-r1.ebuild, +files/rhythmbox-0.12.8-libnotify-0.7.patch:
  Fix building with x11-libs/libnotify >= 0.7 wrt #357823 by Javier Pérez.

  28 Jan 2011; Steve Arnold <nerdboy@gentoo.org> rhythmbox-0.12.8-r1.ebuild:
  Built and tested on ibook G4, closes bug 308763.

  24 Oct 2010; Raúl Porcel <armin76@gentoo.org> rhythmbox-0.12.8-r1.ebuild:
  sparc stable wrt #330773
