@@ -6,14 +6,14 @@ AUX rhythmbox-0.12.8-libnotify-0.7.patch 1156 RMD160 78ce782ffc424eefbe9fc59cb94
 AUX rhythmbox-0.12.8-namespace-conflict.patch 2155 RMD160 2ed6fe3966c860845d0d12ca3e8023c78d7e1bdb SHA1 6e67ba7802d6dc1ff4131942d9aa1af91dec2586 SHA256 538b36af3824aa45b215b247d586c872ff1ee6cb174b8764e22a11410fd3a204
 DIST rhythmbox-0.12.8.tar.bz2 5358950 RMD160 072d4fa06408ebc181b40147db1575d0ef4c99fe SHA1 5d27923cc29b81d7bfbc73d867d7976a5295f964 SHA256 1752fab135808aa78a9afde78448e992020c58c07701f43c989fbabfc6352213
 DIST rhythmbox-0.13.3.tar.bz2 9978135 RMD160 f6f155768ce9c87d844ee47f7f1cc4f167d05052 SHA1 1c6e83972dcd7de8fc1a71586843e29092a0c706 SHA256 ad6532864bb4df30f1014ec81ddc0d2d3f69241235627f46abe5578cf629052a
-EBUILD rhythmbox-0.12.8-r1.ebuild 5073 RMD160 5597ebd4fc5140e7028bd61e8e126d4ae3f4bd3e SHA1 159d6aa94d5f6407e0ad93f4bb99bc534d3fe72c SHA256 83d82a334987833dcbfb5d52732ae758953649f56f525831c6b9d93683925642
+EBUILD rhythmbox-0.12.8-r1.ebuild 5091 RMD160 fa5d35f6fad8308d826f0aa55054d92f33ca088c SHA1 688683ef5eee4f6836d7e3f929ea38ab0531edd3 SHA256 9f5e57e54db6fb62d96ce49710060835d3987dd2c1c4d2c5f569cab9d5c85b55
 EBUILD rhythmbox-0.13.3.ebuild 4991 RMD160 66c370eb7aa09e644e93d044283122ebf6a705a6 SHA1 b628ce8e0ae75d32cf504024d849b48f30b76adc SHA256 0ed57788ecd9b5603f25c7bf95d199d8aa465d6e87032801af270fb434ceb875
-MISC ChangeLog 31810 RMD160 b674d08a62f949d28ca7c6b1d51a62f3138b4b73 SHA1 f1dd7fcec6d77dadbedd8b4ffb733a8c39b1ca2f SHA256 6a8e649c141b5afc87dc8c0dedf80425aeb8a285003df81b525ef8d171b47478
+MISC ChangeLog 31937 RMD160 7ff0d4cbf77243fd1d2e56c1f1bfb2a85a56c7fc SHA1 59d5f63e16c882d67e52d3143931a9030c13bb35 SHA256 7d1eb532fbf1d2a832c40053ccc8de00a6b6442f242aab3299384ef63abc8e47
 MISC metadata.xml 493 RMD160 99d7c84f2cb44d34d07dbdbc9666531ca7d081ef SHA1 e014344c61ed45fd609943fec4097f3861bcebec SHA256 1fece30d8969d46bfa5a547efda6d08b53017ad2475729fc8e7b8ee25621dc0f
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.16 (GNU/Linux)
 
-iEYEARECAAYFAk4jBC0ACgkQCaWpQKGI+9TfJwCfZqYFc4pexY0JMKzOvMflr+Vo
-e7wAn1klQL1o5YS1hPBybVql8lvYYauo
-=iXbV
+iEYEARECAAYFAk4u62sACgkQdIssYB9vBoNpCgCfS4P6SlfRUOS5u+FottFOTik0
+vLwAn1scaEPznkZZ1560gFzgRQl61LR0
+=MXQz
 -----END PGP SIGNATURE-----
